RESOLVED FIXED185561
WebHTMLView is not setting aside subviews when drawing
https://bugs.webkit.org/show_bug.cgi?id=185561
Summary WebHTMLView is not setting aside subviews when drawing
Timothy Hatcher
Reported 2018-05-11 13:21:50 PDT
The method we override in AppKit has changed its signature. - (void)_recursive:(BOOL)recurse displayRectIgnoringOpacity:(NSRect)displayRect inContext:(NSGraphicsContext *)context shouldChangeFontReferenceColor:(BOOL)shouldChangeFontReferenceColor; is now: - (void)_recursive:(BOOL)recursive displayRectIgnoringOpacity:(NSRect)displayRect inContext:(NSGraphicsContext *)graphicsContext shouldChangeFontReferenceColor:(BOOL)shouldChangeFontReferenceColor stopAtLayerBackedViews:(BOOL)stopAtLayerBackedViews; Also the follow is removed: - (void)_recursive:(BOOL)recurseX displayRectIgnoringOpacity:(NSRect)displayRect inGraphicsContext:(NSGraphicsContext *)graphicsContext shouldChangeFontReferenceColor:(BOOL)shouldChangeFontReferenceColor;
Attachments
Patch (5.01 KB, patch)
2018-05-11 13:32 PDT, Timothy Hatcher
no flags
Radar WebKit Bug Importer
Comment 1 2018-05-11 13:22:53 PDT
Radar WebKit Bug Importer
Comment 2 2018-05-11 13:23:03 PDT
Timothy Hatcher
Comment 3 2018-05-11 13:32:00 PDT
WebKit Commit Bot
Comment 4 2018-05-11 13:59:59 PDT
Comment on attachment 340217 [details] Patch Clearing flags on attachment: 340217 Committed r231718: <https://trac.webkit.org/changeset/231718>
WebKit Commit Bot
Comment 5 2018-05-11 14:00:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.